.ait/templates/app/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__
  labels:
    app.kubernetes.io/name: __APP_NAME__
spec:
  type: ClusterIP
  ports:
    - port: __PORT__
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: __APP_NAME__
